--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,3 +2,15 @@ connexion >= 2.0.2
 swagger-ui-bundle >= 0.0.2
 python_dateutil >= 2.6.0
 setuptools >= 21.0.0
+chardet==3.0.4
+firebase-admin==3.0.0
+google-api-core==1.14.3
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-cloud-core==1.0.3
+google-cloud-firestore==1.4.0
+google-cloud-storage==1.20.0
+google-resumable-media==0.4.1
+googleapis-common-protos==1.6.0
+grpcio==1.24.1
